--- a/style.css
+++ b/style.css
@@ -13,6 +13,9 @@
 }
 
 body {
+  height: 100vh;
+  width: 100vw;
+  margin: 0;
   text-align: center;
   font-family: Candara;
   background-image: url("TicTacToeBackground.png");
